# deus

./: .gitignore  .gitmodules  CMakeLists.txt  makefile  solution.cmd
doc/: git.md  input.re  opengl.md  todo.md
res/: merge.py  module.js  resource.rc.in
res/data/shader/: text.frag  text.vert
res/html/: index.css  index.html  index.js
src/: client.cpp  client.h  main.cpp
src/gl/: arrays.h  buffers.h  opengl.h  program.h  shader.h  textures.h
src/js/: file.cpp  file.h  image.cpp  image.h  input.cpp  input.h  log.cpp  log.h
